--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Groq is used to transcribe speech and generate the text response.
 # https://console.groq.com/keys
-GROQ_API_KEY=
+GROQ_API_KEY=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
 
 # Cartesia is used to synthesize the text response into speech.
 # https://play.cartesia.ai/console
-CARTESIA_API_KEY=
+CARTESIA_API_KEY=9ad70683-da13-4615-b1e6-0e3ad002e220
